<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">玉盘</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="text_back">返回</string>
    <string name="text_forward">注册</string>
    <string name="user_name">用户名</string>
    <string name="user_password">密 码</string>
    <string name="passwordnote">手机号</string>
    <string name="usernamenote">密码</string>
    <string name="forget">忘记密码</string>
    <string name="login">登录</string>
    <string name="yanzheng">验证</string>
    <string name="forgetpass_title">忘记密码</string>
    <string name="re_password">请在再次输入密码</string>
    <string name="forward_title">用户注册</string>
    <string name="title_activity_login">Sign in</string>
    <string name="idsix">请输入六位二级密码</string>
    <string name="repassword">重置的密码</string>
    <string name="repassword_btn">重置密码</string>
    <string name="re_repassword_text">请再次输入重置的密码</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="action_example">呵呵</string>
    <string name="navigationanimation">NavigationAnimation</string>
    <string name="title_activity_user_">文件</string>
    <string name="document">文档</string>
    <string name="photo">照片</string>
    <string name="video">视频</string>
    <string name="music">音乐</string>
    <string name="zip">压缩文件</string>
    <string name="other">其他文件</string>
    <string name="rename">重命名</string>
    <string name="del">删除</string>
    <string name="cut_file">移动到···</string>
    <string name="anshijianpaixu">按时间排序</string>
    <string name="andaxiaopaixu">按大小排序</string>
    <string name="user_search_title">搜索</string>
    <string name="user_search_yes">确定</string>
    <string name="user_search_no">取消</string>
    <string name="user_newdilog">新建文件夹</string>
    <string name="user_rename">重命名</string>
    <string name="user_move">移动</string>

    <string name="ipadd">52.78.108.36</string>
    <string name="ipadd2">52.78.111.14</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_user">文件</string>

    <string name="title_activity_start">startActivity</string>

    <string name="title_activity_start_avtivity">StartAvtivity</string>
</resources>
